fixies everywhere, share, header spacing, footnotes copy covid

--- a/src/components/headers/page.module.scss
+++ b/src/components/headers/page.module.scss
@@ -37,7 +37,7 @@
   display: flex;
   justify-content: center;
   margin-top: .25rem;
-  padding-top: .7rem;
+  padding-top: .5rem;
   border-top: 1px solid #ddd;
   width: 100%;
   height: 30px;
@@ -83,8 +83,8 @@
 } // end header-nav
 
 .nav.tight {
-  padding-top: 2px;
   margin: 0;
+  padding: 0;
   border-top: none;
   width: auto;
 }
